<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    tools:context=".activities.HomeActivity">

    <TextView
        android:id="@+id/exhibit_item_text"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="#D2F4F1"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="No Exhibits Added"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>